--- a/src/Components/NavBar/style.css
+++ b/src/Components/NavBar/style.css
@@ -1,7 +1,7 @@
 /* Header */
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
     box-shadow: 0 1px 8px #ddd;
