--- a/src/Components/NavBar/style.css
+++ b/src/Components/NavBar/style.css
@@ -1,15 +1,19 @@
-/* Header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
     box-shadow: 0 1px 8px #ddd;
+    background-color: #222;
+
 }
+
 
 #nav-title {
     margin-right: auto;
     font-size: 1.5em;
+
+
 }
 
 .link {
@@ -17,11 +21,13 @@ header {
     display: inline-block;
     padding: 0 20px;
     text-decoration: none;
-    color: #555;
     transition: all 0.3s ease 0s;
+    background-color: #222;
+
+
 }
 
- 
-  .link:hover {
+
+.link:hover {
     color: #b2dfdb;
 }
