--- a/src/Components/Search/style.css
+++ b/src/Components/Search/style.css
@@ -1,10 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400);
 
-
+.container-search {
+	margin: 10px;
+	display: flex;
+	align-self: center;
+}
 
 .container-search input {
-	background: #222;	
-	background: linear-gradient(#333, #222);	
+	background: #222;
+	background: linear-gradient(#333, #222);
 	border: 1px solid #444;
 	border-radius: 5px 0 0 5px;
 	box-shadow: 0 2px 0 #000;
@@ -18,30 +22,27 @@
 	margin: 0;
 	padding: 0 10px;
 	text-shadow: 0 -1px 0 #000;
-	width: 200px;  
-	
+
 }
 
 
 .container-search input::-webkit-input-placeholder {
-   color: #888;
+	color: #888;
 }
 
 .container-search input:-moz-placeholder {
-   color: #888;
+	color: #888;
 }
 
 .container-search input:focus {
 	animation: glow 800ms ease-out infinite alternate;
 	background: #222922;
 	background: linear-gradient(#333933, #222922);
-	border-color: #393;
-	box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
 	color: #efe;
 	outline: none;
 }
 
-.container-search input:focus::-webkit-input-placeholder { 
+.container-search input:focus::-webkit-input-placeholder {
 	color: #efe;
 }
 
@@ -70,13 +71,12 @@
 	position: relative;
 	text-shadow: 0 -1px 0 #000;
 	width: 80px;
-}	
+}
 
 .container-search button:hover,
 .container-search button:focus {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
-	color: #5f5;
 	outline: none;
 }
 
@@ -86,15 +86,3 @@
 	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
 	top: 1px;
 }
-
-/* @keyframes glow {
-    0% {
-		border-color: #393;
-		box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
-    }	
-    100% {
-		border-color: #6f6;
-		box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 2px 0 #000;
-    }
-} */
-  
